[gd_scene load_steps=3 format=2]

[ext_resource path="res://InventoryManager.gd" type="Script" id=1]
[ext_resource path="res://font/Font.tres" type="DynamicFont" id=2]

[node name="Node2D" type="Node2D" groups=[
"Inventory",
"PlayerInputBlocker",
]]
z_index = 10
script = ExtResource( 1 )

[node name="Labels" type="CanvasLayer" parent="."]

[node name="CardLabel" type="Label" parent="Labels"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
margin_bottom = -4.0
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticLabel" type="Label" parent="Labels"]
margin_left = 48.0
margin_top = 80.0
margin_right = 112.0
margin_bottom = 113.0
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Hand"
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticLabel2" type="Label" parent="Labels"]
margin_left = 48.0
margin_top = 144.0
margin_right = 112.0
margin_bottom = 177.0
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Deck"
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Labels"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
custom_fonts/font = ExtResource( 2 )
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}
